--- a/t/tips_20210830.md
+++ b/t/tips_20210830.md
@@ -1,7 +1,7 @@
 Tips
 =====
 
-Update: 2021-08-30
+Update: 2021-09-09
 
 ## キーボード無しで Windows の設定
 
@@ -18,6 +18,10 @@ Windows　コンピュータ管理 »　コンピューターの管理 » デバ
 レジストリエディタとコンピュータの管理を閉じて、変更を反映するためにマウスを抜き差しする。
 
 [Reverse the scroll of mouse](https://answers.microsoft.com/en-us/windows/forum/all/reverse-the-scroll-of-mouse/334669c3-8a45-4600-830a-8df628d7415e?auth=1)
+
+## Mac OS のコンピュータ名の変更
+
+Mac OS のコンピュータ名の変更は「システム環境設定」→「共有」
 
 ## Chromebook の空き容量
 
