--- a/docs/p/20240406yukyu.md
+++ b/docs/p/20240406yukyu.md
@@ -2,7 +2,7 @@
 
 労働者諸君、このシートを使って今年こそ有休を消化するのだ!!
 
-<20240406yukyu.xlsx>
+[20240406yukyu.xlsx](20240406yukyu.xlsx)
 
 ![有給休暇取得計画・実績シート](20240406yukyu.png)
 
