--- a/docs/t/20241019md3colors.md
+++ b/docs/t/20241019md3colors.md
@@ -5,6 +5,8 @@ Update: 2024-10-19
 [Material Theme Builder](https://material-foundation.github.io/material-theme-builder/)
 で生成したものを `tailwind.config.js` 用に加工しました。
 
+続きは [20241025md3components.md](Svelte 用の Material 3 風のコンポーネント) です。
+
 ## Red
 
 <div><svg xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" style="display: inline-block; height: 1em; width: 1em; vertical-align: text-top;"><rect style="fill:#B33B15" width="24" height="24" x="0" y="0" /></svg> Seed: #B33B15</div>
@@ -1305,4 +1307,4 @@ Update: 2024-10-19
   }
 </pre>
 
-Tag: tailwind md3 material
+Tag: tailwind material
