--- a/docs/t/20241019md3colors.md
+++ b/docs/t/20241019md3colors.md
@@ -5,7 +5,7 @@ Update: 2024-10-19
 [Material Theme Builder](https://material-foundation.github.io/material-theme-builder/)
 で生成したものを `tailwind.config.js` 用に加工しました。
 
-続きは [20241025md3components.html](Svelte 用の Material 3 風のコンポーネント) です。
+続きは [Svelte 用の Material 3 風のコンポーネント](20241025md3components.html) です。
 
 ## Red
 
