update text formatting for clarity in financial ministry discussion

--- a/docs/p/20250328.md
+++ b/docs/p/20250328.md
@@ -2,11 +2,11 @@
 
 Update: 2025-03-28
 
-> 所属する労働組合の掲示板に投稿したものをこちらにも掲示します。
+※ 所属する労働組合の掲示板に投稿したものをこちらにも掲示します。
 
 財務省を諸悪の根源とする言説は 10 年以上前からありました。 フリージャーナリストなどの情報と文筆で仕事をする人が主な発信元だったようです。 若い人ではなくその世界ではベテランとされているような人たちがそのようなことを口走るのを見聞きして、教養も人生経験も人一倍ありそうなものなのに、では、なぜ財務省がそうなるのかということを少しでも考えたことはなかったのかと呆れたものでした。
 
-そのような人たちは、おそらく、財務省以外の官僚や政治家など、予算の要求をする側の人たちの取材して生の声を聞いたのでしょう。 当然、予算の枠に収めるために断られることはたくさんあります。で、それをやるのは財務官僚です。 その結果、予算が欲しい人たちの視点としては目の前の敵は財務官僚ということになります。 それはそうなのですけれど、その枠や、政策上の優先順位を決めるのは政治です。さらにその政治の大枠は、自民党政権でも、かつての民主党政権やもっと昔の非自民連立政権でも、財界からの要求に応えるものでした。財界との関係は経団連のような財界の組織を通すものだけではありません。大蔵省の時代は銀行や証券などの金融企業の MOF 担（MOF は大蔵省や財務省の英語名の略称）と呼ばれる人たちが日常的に連絡をとっていたそうです。大蔵省が改組された後は金融庁に移ったのかな？
+そのような人たちは、おそらく、財務省以外の官僚や政治家など、予算の要求をする側の人たちの取材して生の声を聞いたのでしょう。 当然、予算の枠に収めるために断られることはたくさんあります。で、それをやるのは財務官僚です。 その結果、予算が欲しい人たちの視点としては目の前の敵は財務官僚ということになります。 それはそうなのですけれど、その枠や、政策上の優先順位を決めるのは政治です。さらにその政治の大枠は、自民党政権でも、かつての民主党政権やもっと昔の非自民連立政権でも、財界からの要求に応えるものでした。財界との関係は経団連のような財界の組織を通すものだけではありません。例えば大蔵省の時代は銀行や証券などの金融企業の MOF 担（MOF は大蔵省や財務省の英語名の略称）と呼ばれる人たちが日常的に連絡をとっていたそうです。大蔵省が改組された後は金融庁に移ったのかな？
 
 そして、宮澤喜一や麻生太郎のような首相経験者が複数期に渡って大臣を務めることもある重要な場所でもあります。Wikipedia の「財務大臣」を見ていただくと、それなりの人が就いていることはおわかりいただけるかと。 もちろん、宮澤喜一のような秀才ばかりではないかもしれませんが、漢字が読めない麻生太郎でも予算委員会で経済政策の議論はできる人です。少なくとも私より知識はあるでしょう。
 
